name:                nano-erl-broadcast
version:             0.1.0.0
synopsis:            Broadcast messages to actors inside groups
description:         Broadcast messages to actors inside groups
homepage:            https://github.com/nbrk/nano-erl-broadcast#readme
license:             BSD3
license-file:        LICENSE
author:              Nikolay Burkov
maintainer:          nbrk@linklevel.net
category:            Concurrent
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Concurrent.NanoErl.Broadcast
                     , Control.Concurrent.NanoErl.Examples.BroadcastPingPong
  build-depends:       base >= 4.7 && < 5
                     , nano-erl
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/nbrk/nano-erl-broadcast
